--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
 <body>
   <header>
-    <h1><a href="#">DCODELAB</a></h1>
+    <h1><a href="#">LOGO</a></h1>
     <nav>
       <ul id="gnb">
-        <li><a href="#">Resort</a></li>
-        <li><a href="#">Youtube</a></li>
-        <li><a href="#">Gallery</a></li>
-        <li><a href="#">Community</a></li>
-        <li><a href="#">Customer</a></li>
+        <li><a href="#">menu1</a></li>
+        <li><a href="#">menu2</a></li>
+        <li><a href="#">menu3</a></li>
+        <li><a href="#">menu4</a></li>
+        <li><a href="#">menu5</a></li>
       </ul>
 
       <ul class="sns">
